# ReflectMe

./: db.sqlite3  manage.py  pyproject.toml
ReflectMe/: asgi.py  settings.py  urls.py  wsgi.py
main_app/: forms.py  models.py  tests.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_remove_notation_title_notation_tag_notation_topic_and_more.py  0003_rename_tag_notation_tag_notion_and_more.py  0004_rename_user2_friendship_friend_and_more.py
main_app/templates/main_app/: base.html  friend_profile.html  main.html  notion_confirm_delete.html  notion_update.html  notions.html  page.html  profile.html  update_profile_pic.html
main_app/templates/registration/: login.html  sign_up.html
